force-app/main/default/objects/Room__c/fields/In_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>In_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The room is under maintenance if the checkbox is checked.</description>
    <label>In Maintenance</label>
    <type>Checkbox</type>
</CustomField>