force-app/main/default/objects/Room__c/fields/Number_of_Row_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Row_Seats__c</fullName>
    <label>Number of Row Seats</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>