force-app/main/default/objects/Room__c/fields/Room_Capacity_For_VIPs__c.field-meta.xml
<CustomField>
    <fullName>Room_Capacity_For_VIPs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Room Capacity For VIPs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>