force-app/main/default/objects/Room__c/fields/Room_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Room_Total_Capacity__c</fullName>
    <formula>Room_Capacity__c +  Room_Capacity_For_VIPs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Total Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>