force-app/main/default/objects/Room__c/validationRules/Capacity_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Room_Capacity__c &lt;0</errorConditionFormula>
    <errorMessage>Room capacity can&apos;t be under zero</errorMessage>
</ValidationRule>